# PythonPypi

./: README.md  pyproject.toml  requirements.txt  setup.py
auth/: token_menager.py
biblioteka/src/streaming.egg-info/: PKG-INFO  SOURCES.txt
src/streaming/: streaming_services.py
src/streaming.egg-info/: PKG-INFO  SOURCES.txt
streaming_app/: app.py
