[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming"
version = "1.0.5"  
authors = [
  { name="Sebastian Wołoszyn", email="sebastianwoloszyn01@gmail.com" },
]
description = "Package communicated with streamingapp with one is about titles and authors"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]
